--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,18 @@
   <artifactId>mqBank</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <name>mqBank</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -13,6 +25,19 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>4.2.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.rabbitmq/rabbitmq-client -->
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>rabbitmq-client</artifactId>
+      <version>1.3.0</version>
     </dependency>
   </dependencies>
 </project>
